float value to lat and long possible

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,10 +93,10 @@
                 <input type="number" name='zipcode' id="zipcode" placeholder="range:98001-98199"><br>
                 
                 <label for="lat">Latitude:</label>
-                <input type="number" name='lat' id="lat" placeholder="range:47-48"><br>
+                <input type="number" name='lat' id="lat" step="any" placeholder="range:47-48"><br>
                 
                 <label for="long">Longitude:</label>
-                <input type="number" name='long' id="long" placeholder="range:-122 to -121"><br>
+                <input type="number" name='long' id="long" step="any" placeholder="range:-122 to -121"><br>
                 
                 
                 <input type="submit" value="Predict">
